--- a/yaml/app-volumeMounts.yaml
+++ b/yaml/app-volumeMounts.yaml
@@ -1,49 +1,40 @@
+
 apiVersion: v1
-kind: ConfigMap
+kind: Pod
 metadata:
-  name: app-config
-data:
-  app.conf: |
-    greeting=Hello
-    featureFlag=true
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: go-demo-app-volumes
-  labels:
-    app: go-demo-app
+  name: app-volume
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: go-demo-app-volumes
-  template:
-    metadata:
-      labels:
-        app: go-demo-app-volumes
-    spec:
-      initContainers:
-      - name: init-data
-        image: busybox:1.36
-        command: ["sh", "-c", "echo 'bootstrapped' > /work/data/seed.txt"]
-        volumeMounts:
-        - name: workdir
-          mountPath: /work/data
-      containers:
-      - name: web
-        image: nginxdemos/hello:latest
-        ports:
-        - containerPort: 80
-        volumeMounts:
-        - name: workdir
-          mountPath: /usr/share/nginx/html/data
-        - name: app-config
-          mountPath: /etc/app-config
-          readOnly: true
-      volumes:
-      - name: workdir
-        emptyDir: {}
-      - name: app-config
-        configMap:
-          name: app-config
+  containers:
+    - image: gcr.io/kuar-demo/kuard-amd64:1
+      name: app
+ 
+      livenessProbe:
+        httpGet:
+          path: /healthy
+          port: 8080
+        initialDelaySeconds: 5
+        timeoutSeconds: 1
+        periodSeconds: 10
+        failureThreshold: 3
+ 
+      readinessProbe:
+        httpGet:
+          path: /ready
+          port: 8080
+        periodSeconds: 2
+        initialDelaySeconds: 0
+        failureThreshold: 3
+        successThreshold: 1
+      
+      ports:
+        - containerPort: 8080
+          name: http
+ 
+      volumeMounts:
+      - mountPath: "/data"
+        name: "data"     
+    
+  volumes:
+    - name: "data"
+      hostPath:
+        path: "/var/lib/app"
