--- a/yaml/app.yaml
+++ b/yaml/app.yaml
@@ -1,55 +1,15 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: go-demo-app
-  labels:
-    app: go-demo-app
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: go-demo-app
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
-  template:
-    metadata:
-      labels:
-        app: go-demo-app
-    spec:
-      containers:
-      - name: web
-        image: nginxdemos/hello:latest
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 80
-          name: http
-        # Simple readiness gate to avoid 0/1 flapping during image pull
-        startupProbe:
-          httpGet:
-            path: /
-            port: 80
-          failureThreshold: 30
-          periodSeconds: 2
 ---
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
-  name: go-demo-app
-  labels:
-    app: go-demo-app
+  name: app
+  labels: 
+    app: demo
+    run: demo
 spec:
-  type: ClusterIP
-  selector:
-    app: go-demo-app
-  ports:
-  - name: http
-    port: 80
-    targetPort: 80
-# How to apply & test (comments only):
-# kubectl apply -f yaml/app.yaml
-# kubectl rollout status deploy/go-demo-app
-# kubectl port-forward svc/go-demo-app 8080:80 &
-# curl -fsS http://localhost:8080/
+  containers:
+    - image: gcr.io/k8s-k3s/demo:v1.0.0
+      name: app
+      ports:
+        - containerPort: 8000
+          name: http
