--- a/yaml/app-secret-env.yaml
+++ b/yaml/app-secret-env.yaml
@@ -1,42 +1,20 @@
 apiVersion: v1
-kind: Secret
+kind: Pod
 metadata:
-  name: app-secret
-type: Opaque
-data:
-  API_KEY: QUlTX0RVTU1ZX0FQSV9LRVk=        # base64("AIS_DUMMY_API_KEY")
-  DB_PASSWORD: RFlfREFUQUJBU0VfUEFTUw==    # base64("DY_DATABASE_PASS")
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: go-demo-app-secret
-  labels:
-    app: go-demo-app
+  name: app-secret-env
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: go-demo-app-secret
-  template:
-    metadata:
-      labels:
-        app: go-demo-app-secret
-    spec:
-      securityContext:
-        runAsNonRoot: true
-        fsGroup: 2000
-      containers:
-      - name: web
-        image: nginxdemos/hello:latest
-        imagePullPolicy: IfNotPresent
-        envFrom:
-        - secretRef:
-            name: app-secret
-        command: ["sh","-c","echo API_KEY set: $([ -n \"$API_KEY\" ] && echo yes || echo no); echo DB_PASSWORD set: $([ -n \"$DB_PASSWORD\" ] && echo yes || echo no); exec /docker-entrypoint.sh nginx -g 'daemon off;'"]
-        securityContext:
-          allowPrivilegeEscalation: false
-          readOnlyRootFilesystem: true
-          runAsUser: 1000
-        ports:
-        - containerPort: 80
+  containers:
+  - name: mycontainer
+    image: redis
+    env:
+      - name: SECRET_USERNAME
+        valueFrom:
+          secretKeyRef:
+            name: mysecret1
+            key: username
+      - name: SECRET_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: mysecret1
+            key: password
+  restartPolicy: Never
